# gtfs-fiddler

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
notebooks/: playground.py  reduce_to_busiest_day.py
src/: play_the_fiddle.py
src/gtfs_fiddler/: fiddle.py  gtfs_time.py
tests/: fiddle_test.py  gtfs_time_test.py
tests/data/: test_ensure_min_speed__bus_30.csv  test_ensure_min_speed__bus_original.csv  test_ensure_min_speed__tram_50.csv  test_ensure_min_speed__tram_original.csv  test_ensure_min_speed_of_trip.csv
