[tool.poetry]
name = "gtfs-fiddler"
version = "0.1.0"
description = ""
authors = ["Markus Straub <markus.straub@ait.ac.at>"]
readme = "README.md"
packages = [{ include = "gtfs_fiddler", from = "src" }]

[tool.poetry.dependencies]
python = "~3.11"
gtfs-kit = "6.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7"
ipykernel = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
